<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <android.support.design.widget.AppBarLayout
      android:id="@+id/appbar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
      >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        />

    <com.example.kathir.fifa_cleanarchitecture.view.widget.HeaderView
        android:id="@+id/header_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_scrollFlags="scroll|enterAlways"
        />

  </android.support.design.widget.AppBarLayout>

  <android.support.v4.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:layout_behavior="@string/appbar_scrolling_view_behavior"
      >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/spacing_medium"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >


      <ImageView
          android:id="@+id/image_detail_history"
          android:layout_width="match_parent"
          android:layout_height="256dp"
          android:contentDescription="@string/text_history"
          android:scaleType="fitXY"
          />


      <com.example.kathir.fifa_cleanarchitecture.view.widget.CustomFontTextView
          android:text="@string/text_best_result"
          style="@style/AppTheme.TextViewTitle"
          />

      <TextView
          android:id="@+id/label_best_result"
          style="@style/AppTheme.TextViewValue"
          />

      <com.example.kathir.fifa_cleanarchitecture.view.widget.CustomFontTextView
          android:text="@string/text_coach"
          style="@style/AppTheme.TextViewTitle"
          />

      <TextView
          android:id="@+id/label_coach"
          style="@style/AppTheme.TextViewValue"
          />

      <com.example.kathir.fifa_cleanarchitecture.view.widget.CustomFontTextView
          android:text="@string/text_leading_scorer"
          style="@style/AppTheme.TextViewTitle"
          />

      <TextView
          android:id="@+id/label_leading_scorer"
          style="@style/AppTheme.TextViewValue"
          />




      <ImageView
          android:id="@+id/image_detail_profile"
          android:layout_width="match_parent"
          android:layout_height="256dp"
          android:layout_marginTop="@dimen/spacing_large"
          android:contentDescription="@string/text_image_profile_content"
          android:scaleType="fitXY"
          />


    </LinearLayout>

  </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>